add media query to shelter project

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -22,7 +22,7 @@
           <li>Portland, OR 97213</li>
           <li><a href="mailto:sample@email.com">sample@email.com</a></li>
         </ul>
-        <div class="image">
+        <div class="image" id="contact">
           <img class="image" src="img/shelter.jpg" alt="Animal Shelter">
         </div>
       </div>
